--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>TriTracker</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>TripTracker</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
+  <script src="assets/js/jquery-3.2.1.min.js"></script>
+  <script src="assets/styles/bootstrap-4.1.2/bootstrap.min.js"></script>
+  <script src="assets/styles/bootstrap-4.1.2/popper.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcbXzRxlL0q_tM54tnAWHMlGdmPByFAfE"></script>
 </html>
